# 0-openclaw

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: configuration.md  getting-started.md
docs/channels/: telegram.md
docs/skills/: overview.md
examples/: README.md
graphs/channels/: .gitkeep  discord.0  slack.0  telegram.0
graphs/core/: .gitkeep  proof.0  router.0  session.0  verifier.0
graphs/skills/: .gitkeep  browser.0  calendar.0  echo.0  search.0
schema/: openclaw.capnp
src/: error.rs  lib.rs  main.rs  types.rs
src/channels/: mod.rs
src/channels/common/: mod.rs  rate_limit.rs  retry.rs
src/channels/discord/: config.rs  mod.rs
src/channels/slack/: config.rs  mod.rs
src/channels/telegram/: config.rs  mod.rs
src/cli/: mod.rs
src/gateway/: config.rs  events.rs  mod.rs  proof.rs  router.rs  server.rs  session.rs
src/runtime/: builtins.rs  interpreter.rs  mod.rs  types.rs
src/skills/: composer.rs  graph.rs  loader.rs  mod.rs  registry.rs  verifier.rs
src/skills/builtin/: browser.rs  calendar.rs  echo.rs  mod.rs  search.rs  trade.rs
